--- a/PAGES/Iniciodesesion.html
+++ b/PAGES/Iniciodesesion.html
@@ -37,11 +37,13 @@
                     <a class="botom" href="../PAGES/Nosotros.html">Sobre Nosotros</a>
                 </li>
             </ul>
+            <div class="box grad1">
             <h2>
                 Inicio de sesion
             </h2>
+        </div>
             <fieldset>
-
+                <div class="box grad2">
                 <form action="">
                     <div>
                         <label for="Email">Direccion de correo </label>
@@ -65,6 +67,7 @@
                             <input type="checkbox" name="No soy un robot" id="">
                             No soy un robot
                         </div>
+                    </div>
             </fieldset>
             </form>
 </body>
