--- a/PAGES/Iniciodesesion.html
+++ b/PAGES/Iniciodesesion.html
@@ -34,6 +34,7 @@
                     <a class="botom" href="../PAGES/Editoriales.html">Editoriales</a>
                 </li>
                 <li class="botones au">
+                    
                     <a class="botom" href="../PAGES/Nosotros.html">Sobre Nosotros</a>
                 </li>
             </ul>
@@ -70,6 +71,10 @@
                     </div>
             </fieldset>
             </form>
+            <script src="js/wow.min.js"></script>
+            <script>
+                new WOW().init();
+            </script>
 </body>
 
 
