--- a/Index.html
+++ b/Index.html
@@ -62,11 +62,11 @@
                     </div>
                     <div class="ani caja1 wow animate__animated animate__zoomIn " class="fotos haikyu"><img class="mHaikyu" src="./Img/Haikyu.png" alt="Haikyu 09">
                         <a class="botonCompra" href="#">Haikyu 09</a>
-                        <div class="fotos promised"><img class="mPromised" src="./Img/thepromised.png"
+                        <div class="ani caja1 wow animate__animated animate__zoomIn " class="fotos promised"><img class="mPromised" src="./Img/thepromised.png"
                                 alt="thepromised 05">
                             <a class="botonCompra" href="#">thepromised 05</a>
                         </div>
-                        <div class="fotos ghoul"><img class="" src="./Img/Tokyo ghoul.png" alt="Tokyo ghoul re 13">
+                        <div class="ani caja1 wow animate__animated animate__zoomIn " class="fotos ghoul"><img class="" src="./Img/Tokyo ghoul.png" alt="Tokyo ghoul re 13">
                             <a class="botonCompra" href="#">Tokyo Ghoul re 13</a>
                         </div>
                     </div>
